--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,6 @@ RESEND_API_KEY=your-resend-api-key-here
 FROM_EMAIL=SiteKept <sitekept@gmail.com>
 AGENCY_EMAIL=sitekept@gmail.com
 
-# Next.js Configuration
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_GA_ID=G-XYZ
 
-GA_ID=G-XYZ
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
